[project]
name = "pejortryia"
version = "0.1.0"
description = "A generic Telegram bot framework"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.19,<4",
    "aiosqlite>=0.20,<1",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py314"
line-length = 120
